--- a/clash_web_disposition/clash_web_disposition.vcxproj
+++ b/clash_web_disposition/clash_web_disposition.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="clash_web_disposition.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
